--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<title>Tribasy</title>
 </head>
 <body>
-  <img src="/logo.png" alt="logo">
+<div style="display: flex; justify-content: center; background: rgb(245, 238, 228)">
+	<img src="/logo.png" alt="logo">
+</div>
 </body>
 </html>
