--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div style="display: flex; justify-content: center; background: rgb(245, 238, 228)">
-	<img src="/logo.png" alt="logo">
+	<img src="/logo.png" alt="logo" style="height: 100vh;">
 </div>
 </body>
 </html>
