--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>Tribasy</title>
 </head>
 <body>
-<div style="display: flex; justify-content: center; background: rgb(245, 238, 228)">
-	<img src="/logo.png" alt="logo" style="height: 100vh;">
+<div style="display: flex; justify-content: center; background: rgb(245, 238, 228); height: 100vh; align-items: center">
+	<img src="/logo.png" alt="logo" style="height: 100%;">
 </div>
 </body>
 </html>
