--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="author" content="" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
 	<title>Tribasy</title>
+	<link rel="icon" type="image/x-icon" href="/fav.ico">
 </head>
 <body>
 <div style="display: flex; justify-content: center; background: rgb(245, 238, 228); height: 100vh; align-items: center">
