--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div style="display: flex; justify-content: center; background: rgb(245, 238, 228); height: 100vh; align-items: center">
-	<img src="/logo.png" alt="logo" style="height: 100%;">
+	<img src="/logo.png" alt="logo" style="width: 100%;">
 </div>
 </body>
 </html>
