--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Tribasy</title>
 	<link rel="icon" type="image/x-icon" href="/fav.ico">
 </head>
-<body>
+<body style="background: rgb(245, 238, 228);">
 <div style="display: flex; justify-content: center; background: rgb(245, 238, 228); height: 100vh; align-items: center">
 	<img src="/logo.png" alt="logo" style="width: 100%;">
 </div>
