--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background: rgb(245, 238, 228);">
+<html lang="en" style="background: rgb(245, 238, 228);" data-theme="light">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Tribasy" />
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
 	<title>Tribasy</title>
 	<link rel="icon" type="image/x-icon" href="/fav.ico">
+	<meta name="color-scheme" content="only light">
 </head>
 <body style="background: rgb(245, 238, 228); height: 100%">
 <div style="display: flex; justify-content: center; background: rgb(245, 238, 228); height: 100vh; align-items: center">
